--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>#peanutbutterlife ~mgl</title>
+    <title>~ mgl#peanutbutterlife > █</title>
 </head>
 <body>
     <pre>Under development</pre>
