Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -11,65 +11,57 @@
     gtag('config', 'UA-9679489-4');
 </script>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="author" content="Matt Lebrun">
-<meta name="description" content="in between code, coffee, and peanut butter."><link rel="icon" type="image/ico" href="https://blog.mattlebrun.com/theme/img/favicon.ico"><link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/main.css">    <title>Matt Lebrun - in between code, coffee, and peanut butter.</title>
+<meta name="description" content="In between code, coffee, and peanut butter.">
+
+<meta content="Matt Lebrun" property="og:title">
+<meta content="Matt Lebrun" property="twitter:title">
+<meta content="website" property="og:type"><link rel="icon" type="image/ico" href="https://blog.mattlebrun.com/theme/img/favicon.ico"><link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/styles.css">    <title>matt lebrun: categories</title>
 </head>
 
 <body>
-<div id="layout">
-<!-- Menu toggle -->
-<a href="#menu" id="menuLink" class="menu-link">
-    <!-- Hamburger icon -->
-    <span></span>
-</a>
-<div id="menu">
-    <div class="pure-menu">
-        <ul class="pure-menu-list">
+<div class="container">
 
-
-            <li class="pure-menu-item"><a href="https://blog.mattlebrun.com/archives.html" class="pure-menu-link">All Posts</a></li>
-        </ul>
-    </div>
-</div>    <div id="main">
-        <!-- SITE_HEADER:START -->
-        <header class="header">
-            <h1><a href="https://blog.mattlebrun.com/">Matt Lebrun</a></h1>
-            <h2>in between code, coffee, and peanut butter.</h2>
-        </header>
-        <!-- SITE_HEADER:END -->
-
-        <div class="content">
-<ul>
-    <li><a href="https://blog.mattlebrun.com/category/code.html">code</a> (3)</li>
-    <li><a href="https://blog.mattlebrun.com/category/hacks.html">hacks</a> (2)</li>
-    <li><a href="https://blog.mattlebrun.com/category/thoughts.html">thoughts</a> (3)</li>
-</ul>
-        </div>
-
-        <!-- SITE_FOOTER:START -->
-        <footer class="footer">
-            <div class="pure-menu pure-menu-horizontal">
-                <p class="pure-menu-heading">&copy; 2017 Matt Lebrun</p>
-                <ul class="pure-menu-list">
-                    <li class="pure-menu-item">
-                    <a class="pure-menu-link" href="https://twitter.com/cr8ivecodesmith">Twitter</a>
-                    </li>
-                    <li class="pure-menu-item">
-                    <a class="pure-menu-link" href="https://blog.mattlebrun.com/archives.html">Archive</a>
-                    </li>
-                    <li class="pure-menu-item">
-                    <a class="pure-menu-link" href="https://blog.mattlebrun.com/feeds/blog.mattlebrun.com.all.atom.xml">Feeds</a>
-                    </li>
-                </ul>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="text-left">
+                <h1>
+                    <a href="https://blog.mattlebrun.com/">matt lebrun</a>:
+                    <strong>
+                        <a href="https://blog.mattlebrun.com/categories.html" rel="bookmark"
+                           title="Permanent link to categories">
+categories</a>
+                    </strong>
+                </h1>
             </div>
-        </footer>
-        <!-- SITE_FOOTER:END -->
-    </div> <!-- END:main -->
-</div> <!-- END:layout -->
+        </div>
+    </div>
 
-<!--
-JS Section
--->
-<script src="https://blog.mattlebrun.com/theme/js/pure/ui.js"></script></body>
+    <div class="row section">
+<div class="col-lg-12 col-md-12 col-sm-12">
+    <ul>
+        <li><a href="https://blog.mattlebrun.com/category/code.html">code</a> (3)</li>
+        <li><a href="https://blog.mattlebrun.com/category/hacks.html">hacks</a> (2)</li>
+        <li><a href="https://blog.mattlebrun.com/category/thoughts.html">thoughts</a> (3)</li>
+    </ul>
+</div>
+    </div>
+
+    <div class="row section">
+<div class="col-lg-12 col-md-12 col-sm-12">
+</div>
+
+<div class="col-lg-12 col-md-12 col-sm-12">
+    <p class="text-left">
+    <span class="copy-left">&copy;</span>
+2017 Matt Lebrun
+ - In between code, coffee, and peanut butter.    </p>
+</div>    </div>
+
+</div>
+<script src="https://blog.mattlebrun.com/theme/js/jquery-3.2.1.slim.min.js"></script>
+<script src="https://blog.mattlebrun.com/theme/js/bootstrap.min.js"></script></body>
 </html>
