--- a/index2.html
+++ b/index2.html
@@ -14,12 +14,12 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="author" content="Matt Lebrun">
-<meta name="description" content="In between code, coffee, and peanut butter.">
+<meta name="description" content="in between code, coffee, and peanut butter.">
 
 <meta content="Matt Lebrun" property="og:title">
 <meta content="Matt Lebrun" property="twitter:title">
 <meta content="website" property="og:type"><link rel="icon" type="image/ico" href="https://blog.mattlebrun.com/theme/img/favicon.ico"><link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/styles.css">    <title>matt lebrun: getting indefinite input feed in hackerrank</title>
+<link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/styles.css">    <title>&raquo; getting indefinite input feed in hackerrank matt lebrun</title>
 </head>
 
 <body>
@@ -100,8 +100,8 @@ getting indefinite input feed in hackerrank</a>
 <div class="col-lg-12 col-md-12 col-sm-12">
     <p class="text-left">
     <span class="copy-left">&copy;</span>
-2017 Matt Lebrun
- - In between code, coffee, and peanut butter.    </p>
+2017 matt lebrun
+ - in between code, coffee, and peanut butter.    </p>
 </div>    </div>
 
 </div>
