--- a/archives.html
+++ b/archives.html
@@ -25,7 +25,7 @@
 <body>
 <div class="container">
 
-    <div class="row">
+    <div class="row section-bot">
         <div class="col-lg-12 col-md-12 col-sm-12">
             <div class="text-left">
                 <h1 class="main-header">
@@ -40,7 +40,7 @@ archives</a>
         </div>
     </div>
 
-    <div class="row section">
+    <div class="row section-bot">
 <div class="col-lg-12 col-md-12 col-sm-12">
     <div class="btn-group btn-group-sm section-bot" role="group" aria-label="Archive filters">
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/archives.html">all</a>
@@ -74,18 +74,28 @@ archives</a>
 </div>
     </div>
 
-    <div class="row section">
+    <div class="row">
 <div class="col-lg-12 col-md-12 col-sm-12">
+    <div class="text-center section-bot-sm">
+            <a class="badge badge-light"
+               href="https://mattlebrun.com">about</a>
+            <a class="badge badge-light"
+               href="https://github.com/cr8ivecodesmith">github</a>
+            <a class="badge badge-light"
+               href="https://twitter.com/cr8ivecodesmith">twitter</a>
+    </div>
 </div>
-
 <div class="col-lg-12 col-md-12 col-sm-12">
-    <p class="text-left">
-    <span class="copy-left">&copy;</span>
+    <div class="text-center">
+        <small class="text-muted">
+            <span class="copy-left">&copy;</span>
 2017 matt lebrun
- - in between code, coffee, and peanut butter.    </p>
+ - in between code, coffee, and peanut butter.        </small>
+    </div>
 </div>    </div>
 
 </div>
 <script src="https://blog.mattlebrun.com/theme/js/jquery-3.2.1.slim.min.js"></script>
-<script src="https://blog.mattlebrun.com/theme/js/bootstrap.min.js"></script></body>
+<script src="https://blog.mattlebrun.com/theme/js/bootstrap.min.js"></script>
+<script src="https://blog.mattlebrun.com/theme/js/readingTime.min.js"></script></body>
 </html>
