--- a/authors.html
+++ b/authors.html
@@ -19,7 +19,7 @@
 <meta content="Matt Lebrun" property="og:title">
 <meta content="Matt Lebrun" property="twitter:title">
 <meta content="website" property="og:type"><link rel="icon" type="image/ico" href="https://blog.mattlebrun.com/theme/img/favicon.ico"><link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/styles.css">    <title>&raquo; authors matt lebrun</title>
+<link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/styles.css">    <title>~ authors matt lebrun</title>
 </head>
 
 <body>
