--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ getting indefinite input feed in hackerrank</a>
 </div>    <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="section-top-sm section-bot-sm archive-link">
             <a href="https://blog.mattlebrun.com/archives.html">
-                <strong>See all posts &raquo;</strong>
+                <strong>See all articles &raquo;</strong>
             </a>
         </div>
     </div>
@@ -108,6 +108,8 @@ getting indefinite input feed in hackerrank</a>
     <div class="row">
 <div class="col-lg-12 col-md-12 col-sm-12">
     <div class="text-center section-bot-sm">
+        <a class="badge badge-primary"
+           href="https://blog.mattlebrun.com/archives.html">more</a>
             <a class="badge badge-light"
                href="https://mattlebrun.com">about</a>
             <a class="badge badge-light"
