--- a/authors.html
+++ b/authors.html
@@ -46,6 +46,7 @@ authors</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/archives.html">all</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/categories.html">categories</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/tags.html">tags</a>
+        <a class="btn btn-dark" href="https://blog.mattlebrun.com/2017.html">2017</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2016.html">2016</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2014.html">2014</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2013.html">2013</a>
@@ -57,7 +58,7 @@ authors</a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/author/matt-lebrun.html">
             Matt Lebrun
-            <span class="badge badge-info badge-pill">8</span>
+            <span class="badge badge-info badge-pill">9</span>
         </a>
     </div>
 </div>
