--- a/authors.html
+++ b/authors.html
@@ -56,7 +56,7 @@ authors</a>
 <div class="col-lg-12 col-md-12 col-sm-12">
     <div class="list-group archive-link">
         <a class="list-group-item d-flex justify-content-between align-items-center"
-           href="https://blog.mattlebrun.com/author/matt-lebrun.html">
+           href="https://blog.mattlebrun.com/">
             Matt Lebrun
             <span class="badge badge-info badge-pill">9</span>
         </a>
