--- a/2016.html
+++ b/2016.html
@@ -19,6 +19,7 @@
 <meta content="Matt Lebrun" property="og:title">
 <meta content="Matt Lebrun" property="twitter:title">
 <meta content="website" property="og:type"><link rel="icon" type="image/ico" href="https://blog.mattlebrun.com/theme/img/favicon.ico"><link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/pygments/default.css">
 <link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/styles.css">    <title>~ articles for 2016 matt lebrun</title>
 </head>
 
@@ -82,6 +83,7 @@ articles for 2016</a>
                href="https://github.com/cr8ivecodesmith">github</a>
             <a class="badge badge-light"
                href="https://twitter.com/cr8ivecodesmith">twitter</a>
+
     </div>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12">
