--- a/tags.html
+++ b/tags.html
@@ -47,6 +47,7 @@ tags</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/archives.html">all</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/categories.html">categories</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/tags.html">tags</a>
+        <a class="btn btn-dark" href="https://blog.mattlebrun.com/2018.html">2018</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2017.html">2017</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2016.html">2016</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2014.html">2014</a>
@@ -57,8 +58,23 @@ tags</a>
 <div class="col-lg-12 col-md-12 col-sm-12">
     <div class="list-group archive-link">
         <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/future.html">
+            future
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/python.html">
             python
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/soul.html">
+            soul
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/technology.html">
+            technology
             <span class="badge badge-info badge-pill">1</span>
         </a>
     </div>
@@ -85,7 +101,7 @@ tags</a>
     <div class="text-center">
         <small class="text-muted">
             <span class="copy-left">&copy;</span>
-2017 matt lebrun
+2018 matt lebrun
  - in between code, coffee, and peanut butter.        </small>
     </div>
 </div>    </div>
