--- a/categories.html
+++ b/categories.html
@@ -47,6 +47,7 @@ categories</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/archives.html">all</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/categories.html">categories</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/tags.html">tags</a>
+        <a class="btn btn-dark" href="https://blog.mattlebrun.com/2018.html">2018</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2017.html">2017</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2016.html">2016</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2014.html">2014</a>
@@ -69,7 +70,7 @@ categories</a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/category/thoughts.html">
             thoughts
-            <span class="badge badge-info badge-pill">4</span>
+            <span class="badge badge-info badge-pill">5</span>
         </a>
     </div>
 </div>
@@ -95,7 +96,7 @@ categories</a>
     <div class="text-center">
         <small class="text-muted">
             <span class="copy-left">&copy;</span>
-2017 matt lebrun
+2018 matt lebrun
  - in between code, coffee, and peanut butter.        </small>
     </div>
 </div>    </div>
