Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -89,6 +89,12 @@ categories</a>
                href="https://github.com/cr8ivecodesmith">github</a>
             <a class="badge badge-light"
                href="https://twitter.com/cr8ivecodesmith">twitter</a>
+            <a class="badge badge-light"
+               href="https://www.facebook.com/cr8ivecodesmith">facebook</a>
+            <a class="badge badge-light"
+               href="https://instagram.com/cr8ivecodesmith">instagram</a>
+            <a class="badge badge-light"
+               href="https://ph.linkedin.com/in/cr8ivecodesmith">linkedin</a>
 
     </div>
 </div>
