Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
+<meta charset="utf-8">
+
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="author" content="Matt Lebrun">
+<meta name="description" content="in between code, coffee, and peanut butter.">
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-9679489-4"></script>
 <script>
@@ -10,17 +15,10 @@
 
     gtag('config', 'UA-9679489-4');
 </script>
-<meta charset="utf-8">
-
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="author" content="Matt Lebrun">
-<meta name="description" content="in between code, coffee, and peanut butter.">
-
-<meta content="Matt Lebrun" property="og:title">
-<meta content="Matt Lebrun" property="twitter:title">
-<meta content="website" property="og:type"><link rel="icon" type="image/ico" href="https://blog.mattlebrun.com/theme/img/favicon.ico"><link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/bootstrap.min.css">
+<link rel="icon" type="image/ico" href="https://blog.mattlebrun.com/theme/img/favicon.ico"><link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/pygments/default.css">
-<link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/styles.css">    <title>~ authors matt lebrun</title>
+<link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/styles.css">
+    <title>authors matt lebrun</title>
 </head>
 
 <body>
