--- a/2014.html
+++ b/2014.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-<div class="container">
+<div class="container main-container">
 
     <div class="row section-bot">
         <div class="col-lg-12 col-md-12 col-sm-12">
@@ -40,7 +40,7 @@ articles for 2014</a>
     </div>
 
     <div class="row section-bot">
-<div class="col-lg-12 col-md-12 col-sm-12">
+<div class="col-lg-12 col-md-12 col-sm-12 archive-filter">
     <div class="btn-group btn-group-sm section-bot" role="group" aria-label="Archive filters">
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/archives.html">all</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/categories.html">categories</a>
