--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-<div class="container">
+<div class="container main-container">
 
     <div class="row section-bot">
         <div class="col-lg-12 col-md-12 col-sm-12">
