--- a/tags.html
+++ b/tags.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-<div class="container">
+<div class="container main-container">
 
     <div class="row section-bot">
         <div class="col-lg-12 col-md-12 col-sm-12">
@@ -40,7 +40,7 @@ tags</a>
     </div>
 
     <div class="row section-bot">
-<div class="col-lg-12 col-md-12 col-sm-12">
+<div class="col-lg-12 col-md-12 col-sm-12 archive-filter">
     <div class="btn-group btn-group-sm section-bot" role="group" aria-label="Archive filters">
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/archives.html">all</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/categories.html">categories</a>
@@ -63,7 +63,7 @@ tags</a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/python.html">
             python
-            <span class="badge badge-info badge-pill">1</span>
+            <span class="badge badge-info badge-pill">2</span>
         </a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/soul.html">
