--- a/categories.html
+++ b/categories.html
@@ -61,6 +61,11 @@ categories</a>
             <span class="badge badge-info badge-pill">3</span>
         </a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/category/community.html">
+            community
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/category/hacks.html">
             hacks
             <span class="badge badge-info badge-pill">2</span>
