--- a/tags.html
+++ b/tags.html
@@ -61,6 +61,11 @@ tags</a>
             <span class="badge badge-info badge-pill">1</span>
         </a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/nyfti.html">
+            nyfti
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/pycon.html">
             pycon
             <span class="badge badge-info badge-pill">1</span>
