Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -66,19 +66,19 @@ categories</a>
             <span class="badge badge-info badge-pill">1</span>
         </a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
-           href="https://blog.mattlebrun.com/category/cycling.html">
-            cycling
-            <span class="badge badge-info badge-pill">1</span>
-        </a>
-        <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/category/hacks.html">
             hacks
             <span class="badge badge-info badge-pill">2</span>
         </a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/category/health.html">
+            health
+            <span class="badge badge-info badge-pill">2</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/category/thoughts.html">
             thoughts
-            <span class="badge badge-info badge-pill">5</span>
+            <span class="badge badge-info badge-pill">8</span>
         </a>
     </div>
 </div>
