--- a/tags.html
+++ b/tags.html
@@ -56,6 +56,16 @@ tags</a>
 <div class="col-lg-12 col-md-12 col-sm-12">
     <div class="list-group archive-link">
         <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/cycling.html">
+            cycling
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/fitness.html">
+            fitness
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/future.html">
             future
             <span class="badge badge-info badge-pill">1</span>
