Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -71,6 +71,11 @@ tags</a>
             <span class="badge badge-info badge-pill">1</span>
         </a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/game-journal.html">
+            game-journal
+            <span class="badge badge-info badge-pill">2</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/nyfti.html">
             nyfti
             <span class="badge badge-info badge-pill">1</span>
@@ -99,6 +104,11 @@ tags</a>
            href="https://blog.mattlebrun.com/tag/technology.html">
             technology
             <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/ultima-iv.html">
+            ultima-iv
+            <span class="badge badge-info badge-pill">2</span>
         </a>
     </div>
 </div>
