--- a/tags.html
+++ b/tags.html
@@ -81,6 +81,16 @@ tags</a>
             <span class="badge badge-info badge-pill">1</span>
         </a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/philantrophy.html">
+            philantrophy
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/principles.html">
+            principles
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/pycon.html">
             pycon
             <span class="badge badge-info badge-pill">1</span>
@@ -94,6 +104,11 @@ tags</a>
            href="https://blog.mattlebrun.com/tag/python.html">
             python
             <span class="badge badge-info badge-pill">2</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/pythonph.html">
+            pythonph
+            <span class="badge badge-info badge-pill">1</span>
         </a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/soul.html">
