Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -45,6 +45,7 @@ tags</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/archives.html">all</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/categories.html">categories</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/tags.html">tags</a>
+        <a class="btn btn-dark" href="https://blog.mattlebrun.com/2019.html">2019</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2018.html">2018</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2017.html">2017</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2016.html">2016</a>
@@ -71,9 +72,19 @@ tags</a>
             <span class="badge badge-info badge-pill">1</span>
         </a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/game-development.html">
+            game-development
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/game-journal.html">
             game-journal
             <span class="badge badge-info badge-pill">2</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/kivy.html">
+            kivy
+            <span class="badge badge-info badge-pill">1</span>
         </a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/nyfti.html">
@@ -103,7 +114,7 @@ tags</a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/python.html">
             python
-            <span class="badge badge-info badge-pill">2</span>
+            <span class="badge badge-info badge-pill">3</span>
         </a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/pythonph.html">
@@ -155,7 +166,7 @@ tags</a>
     <div class="text-center">
         <small class="text-muted">
             <span class="copy-left">&copy;</span>
-2018 matt lebrun
+2019 matt lebrun
  - in between code, coffee, and peanut butter.        </small>
     </div>
 </div>    </div>
