--- a/authors.html
+++ b/authors.html
@@ -45,6 +45,7 @@ authors</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/archives.html">all</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/categories.html">categories</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/tags.html">tags</a>
+        <a class="btn btn-dark" href="https://blog.mattlebrun.com/2019.html">2019</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2018.html">2018</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2017.html">2017</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2016.html">2016</a>
@@ -58,7 +59,7 @@ authors</a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/">
             Matt Lebrun
-            <span class="badge badge-info badge-pill">20</span>
+            <span class="badge badge-info badge-pill">21</span>
         </a>
     </div>
 </div>
@@ -90,7 +91,7 @@ authors</a>
     <div class="text-center">
         <small class="text-muted">
             <span class="copy-left">&copy;</span>
-2018 matt lebrun
+2019 matt lebrun
  - in between code, coffee, and peanut butter.        </small>
     </div>
 </div>    </div>
