--- a/tags.html
+++ b/tags.html
@@ -127,6 +127,11 @@ tags</a>
             <span class="badge badge-info badge-pill">1</span>
         </a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/teaching.html">
+            teaching
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/technology.html">
             technology
             <span class="badge badge-info badge-pill">1</span>
