--- a/tags.html
+++ b/tags.html
@@ -87,6 +87,11 @@ tags</a>
             <span class="badge badge-info badge-pill">1</span>
         </a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/musings.html">
+            musings
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/nyfti.html">
             nyfti
             <span class="badge badge-info badge-pill">1</span>
@@ -119,6 +124,11 @@ tags</a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/pythonph.html">
             pythonph
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/reflections.html">
+            reflections
             <span class="badge badge-info badge-pill">1</span>
         </a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
