--- a/tags.html
+++ b/tags.html
@@ -45,6 +45,7 @@ tags</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/archives.html">all</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/categories.html">categories</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/tags.html">tags</a>
+        <a class="btn btn-dark" href="https://blog.mattlebrun.com/2021.html">2021</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2019.html">2019</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2018.html">2018</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/2017.html">2017</a>
@@ -89,7 +90,7 @@ tags</a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/musings.html">
             musings
-            <span class="badge badge-info badge-pill">1</span>
+            <span class="badge badge-info badge-pill">2</span>
         </a>
         <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/nyfti.html">
@@ -181,7 +182,7 @@ tags</a>
     <div class="text-center">
         <small class="text-muted">
             <span class="copy-left">&copy;</span>
-2019 matt lebrun
+2021 matt lebrun
  - in between code, coffee, and peanut butter.        </small>
     </div>
 </div>    </div>
