Generate Pelican site

--- a/2014.html
+++ b/2014.html
@@ -6,7 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="author" content="Matt Lebrun">
 <meta name="description" content="in between code, coffee, and peanut butter.">
-<link rel="icon" type="image/ico" href="https://blog.mattlebrun.com/theme/img/favicon.ico"><link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/bootstrap.min.css">
+<link rel="icon" type="image/ico" href="https://blog.mattlebrun.com/theme/img/favicon.ico" sizes="any">
+<link rel="icon" type="image/svg+xml" href="https://blog.mattlebrun.com/theme/img/icon.svg">
+<link rel="apple-touch-icon" href="https://blog.mattlebrun.com/theme/img/apple-touch-icon.png">
+<link rel="manifest" href="https://blog.mattlebrun.com/theme/img/manifest.webmanifest">
+<link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/pygments/default.css">
 <link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/styles.css">
     <title>articles for 2014 matt lebrun</title>
@@ -73,10 +77,6 @@ articles for 2014</a>
                href="https://github.com/cr8ivecodesmith">github</a>
             <a class="badge badge-light"
                href="https://twitter.com/cr8ivecodesmith">twitter</a>
-            <a class="badge badge-light"
-               href="https://www.facebook.com/cr8ivecodesmith">facebook</a>
-            <a class="badge badge-light"
-               href="https://instagram.com/cr8ivecodesmith">instagram</a>
             <a class="badge badge-light"
                href="https://ph.linkedin.com/in/cr8ivecodesmith">linkedin</a>
 
