Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@ no content</a>
             <a class="badge badge-light"
                href="https://github.com/cr8ivecodesmith">github</a>
             <a class="badge badge-light"
-               href="https://twitter.com/cr8ivecodesmith">twitter</a>
-            <a class="badge badge-light"
                href="https://mtd.pythonasia.org/@matt">mastodon</a>
             <a class="badge badge-light"
-               href="https://ph.linkedin.com/in/cr8ivecodesmith">linkedin</a>
+               href="https://www.linkedin.com/in/cr8ivecodesmith">linkedin</a>
 
     </div>
 </div>
