--- a/authors.html
+++ b/authors.html
@@ -60,11 +60,9 @@ authors</a>
             <a class="badge badge-light"
                href="https://github.com/cr8ivecodesmith">github</a>
             <a class="badge badge-light"
-               href="https://twitter.com/cr8ivecodesmith">twitter</a>
-            <a class="badge badge-light"
                href="https://mtd.pythonasia.org/@matt">mastodon</a>
             <a class="badge badge-light"
-               href="https://ph.linkedin.com/in/cr8ivecodesmith">linkedin</a>
+               href="https://www.linkedin.com/in/cr8ivecodesmith">linkedin</a>
 
     </div>
 </div>
