Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/pygments/default.css">
 <link rel="stylesheet" href="https://blog.mattlebrun.com/theme/css/styles.css">
-    <title> matt lebrun</title>
+    <title> Matt Lebrun</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         <div class="col-lg-12 col-md-12 col-sm-12">
             <div class="text-left">
                 <h1 class="main-header">
-                    <a href="https://blog.mattlebrun.com/">matt lebrun</a>:
+                    <a href="https://blog.mattlebrun.com/">Matt Lebrun</a>:
                     <strong>
                         <a href="https://blog.mattlebrun.com/#no-content" rel="bookmark"
                            title="Permanent link to no content">
@@ -62,7 +62,7 @@ no content</a>
     <div class="text-center">
         <small class="text-muted">
             <span class="copy-left">&copy;</span>
-2023 matt lebrun
+2023 Matt Lebrun
  - in between code, coffee, and peanut butter.        </small>
     </div>
 </div>    </div>
