--- a/tags.html
+++ b/tags.html
@@ -40,10 +40,16 @@ tags</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/archives.html">all</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/categories.html">categories</a>
         <a class="btn btn-dark" href="https://blog.mattlebrun.com/tags.html">tags</a>
+        <a class="btn btn-dark" href="https://blog.mattlebrun.com/2023.html">2023</a>
     </div>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12">
     <div class="list-group archive-link">
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/pycon.html">
+            pycon
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
     </div>
 </div>
     </div>
