--- a/categories.html
+++ b/categories.html
@@ -50,6 +50,11 @@ categories</a>
             community
             <span class="badge badge-info badge-pill">1</span>
         </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/category/personal-development.html">
+            personal-development
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
     </div>
 </div>
     </div>
