--- a/tags.html
+++ b/tags.html
@@ -46,8 +46,58 @@ tags</a>
 <div class="col-lg-12 col-md-12 col-sm-12">
     <div class="list-group archive-link">
         <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/annual-planning.html">
+            annual-planning
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/continuous-learning.html">
+            continuous-learning
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/goal-setting.html">
+            goal-setting
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/okrs.html">
+            okrs
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/personal-growth.html">
+            personal-growth
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/productivity.html">
+            productivity
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/professional-development.html">
+            professional-development
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
            href="https://blog.mattlebrun.com/tag/pycon.html">
             pycon
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/reflective-learning.html">
+            reflective-learning
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/strategic-planning.html">
+            strategic-planning
+            <span class="badge badge-info badge-pill">1</span>
+        </a>
+        <a class="list-group-item d-flex justify-content-between align-items-center"
+           href="https://blog.mattlebrun.com/tag/values-alignment.html">
+            values-alignment
             <span class="badge badge-info badge-pill">1</span>
         </a>
     </div>
