Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@ alt="Couple doing their annual planning. (photo AI generated)">
     </div>
 
     <div class="col-lg-12 col-md-12 col-sm-12">
-        <p>I now appreciate how OKRs improved the visibility of how our actions aligns with our values in our annual couple planning process.</p>
-<p><strong>Why it clicked for us:</strong></p>
+        <h2>OKRs do not need to suck</h2>
+<p>I now appreciate how OKRs improved the visibility of how our actions aligns with our values in our annual couple planning process.</p>
+<h2>Why it clicked for us</h2>
 <p>Every year Mickey and I reflect upon the things we've accomplished in all key areas of our lives. </p>
 <p>While we do feel like every year we are growing and moving towards the direction we set for ourselves, I appreciate how OKRs puts these front and center.</p>
 <ul>
@@ -61,7 +62,7 @@ alt="Couple doing their annual planning. (photo AI generated)">
 <li>⚖️Measure: A 0-1 scale relative to the indicators.</li>
 <li>🔎Review: Regular reflections instead of just yearly.</li>
 </ul>
-<p><strong>Diving deeper:</strong> </p>
+<h2>Diving deeper</h2>
 <ul>
 <li>Objectives are <strong>ambitious and aspirational</strong> end-states directed by our values and vision.<ul>
 <li>What do we want to become?</li>
@@ -86,9 +87,9 @@ alt="Couple doing their annual planning. (photo AI generated)">
 </ul>
 </li>
 </ul>
-<p><strong>Taking it further:</strong></p>
+<h2>Taking it further</h2>
 <p>Now that it clicked, we want to apply this to PythonPH and our other endeavors too.</p>
-<p><strong>Further reading:</strong> </p>
+<h2>Further reading</h2>
 <ul>
 <li><a href="https://web.archive.org/web/20231202011537/https://www.atlassian.com/agile/agile-at-scale/okr">OKRs: The Ultimate Guide</a></li>
 </ul>
